--- a/client/index.html
+++ b/client/index.html
@@ -11,6 +11,16 @@
   <button class="do_it">DO IT!</button>
 
   <script src="./index.js"></script>
+
+  <!-- <style>
+    body {
+      width: 100%;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  </style> -->
 </body>
 
 </html>
